Issue: #FT-2023 Component: Changes: Fixed the issue: the last question is not fully visible

--- a/TripfinderWeb/TripfinderWeb/Global/Css/form.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/form.less
@@ -1283,7 +1283,7 @@
 				position: absolute;
 				top: 150px;
 				left: 0;
-				//bottom: 60px;
+				bottom: 60px;
 				right: 0;
 				height: initial !important;
 
